# gerrit-workflow-tools

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  TODO-Before-Release-Restructured.md  pyproject.toml
.codex/prompts/: documentation-review.md
.github/workflows/: codex-documentation-review.yml
contrib/: run-observe-commands.sh
contrib/completion/: ger.bash  git-gerrit-workflow-tools.bash
docu/: Completion.md  Configuration.md  Howto_Test.md  Migration-Plan-Gerrit-Push-Target.md  README.md  SPEC.md  Version 1 Scope.md  architecture.md  ger_log_output.md  v1-todos.md
docu/commands/: branch.md  comments.md  edit.md  gbranch.md  gchangeid-check.md  gcomments.md  gedit.md  ger-show-goal.md  glog.md  gpush.md  gready.md  gsha-gcid.md  gshow-todos.md  gstack.md  log.md  push.md  sha-cid.md  show-todos.md
docu/spec/commands/: assign.md  bash-completion.md  branch.md  cache.md  edit.md  fetch-api.md  fix.md  log.md  push.md  rebase.md  setup.md  sha-change-id.md  show.md
docu/specs/: glog-spec.md
scripts/: audit_test_coverage.py  run_integration.py  run_integration_tests.sh
src/gerrit_workflow_tools/: __init__.py  bash_completion_generator.py  change_id.py  cli_bash_completion.py  cli_branch.py  cli_cache.py  cli_changeid.py  cli_cid.py  cli_comments.py  cli_common.py  cli_edit.py  cli_fetch_api.py  cli_fix.py  cli_gbranch.py  cli_gchangeid_check.py  cli_gcid.py  cli_gcomments.py  cli_gedit.py  cli_ger.py  cli_glog.py  cli_gpush.py  cli_gready.py  cli_gsha.py  cli_gshow.py  cli_gstack.py  cli_log.py  cli_push.py  cli_rebase.py  cli_restack.py  cli_setup.py  cli_sha.py  cli_show.py  cli_style.py  config.py  gerrit_change_status.py  gerrit_client.py  gerrit_comments.py  gerrit_url.py  git_run.py  push_input_line.py  (+8 more)
src/gerrit_workflow_tools/core/: __init__.py  change_id.py  comment_chains.py  config.py  gerrit_change_status.py  gerrit_client.py  gerrit_comments.py  gerrit_project_id.py  gerrit_show.py  gerrit_url.py  git_run.py  push_reviewers.py  ready_calc.py  reviewer.py  reviewer_completion.py  stack.py  upstream_interactive.py
src/gerrit_workflow_tools/core/gerrit/: __init__.py  cache.py  models.py  paths.py  rest.py  service.py
src/gerrit_workflow_tools/render/: __init__.py  commit_row.py  status_fmt.py
tests/: __init__.py  cli_gerrit_mocks.py  conftest.py  fixtures.py  helpers.py  test_bash_completion.py  test_branch.py  test_cid.py  test_comment_chains.py  test_comments.py  test_config.py  test_edit.py  test_edit_attention.py  test_fetch_api.py  test_fetch_follow_ups.py  test_fix.py  test_gbranch.py  test_gchangeid_check.py  test_gcid.py  test_gcomments.py  test_gedit.py  test_ger.py  test_gerrit_cache.py  test_gerrit_client_parallel.py  test_gerrit_project_id.py  test_git_run.py  test_glog.py  test_gpush.py  test_gready.py  test_gsha.py  test_gshow.py  test_gstack.py  test_log.py  test_push.py  test_push_input_line.py  test_push_input_prompt.py  test_push_reviewers.py  test_ready_calc.py  test_rebase_enricher.py  test_rebase_sequence_editor.py  (+10 more)
tests/integration/: README.md  __init__.py  conftest.py  docker_gerrit.py  gerrit_bootstrap.py  gerrit_http.py  gerrit_seed.py  integration_helpers.py  load_local_env.py  local.env.example  profile.py  repo_builder.py  test_00_smoke_http.py  test_01_lifecycle.py  test_02_seeding.py  test_03_push.py  test_04_review_matrix.py  test_05_commands.py  test_06_attention_labels.py  test_07_command_smoke.py  test_08_set_topic.py  test_reviewer_strategies_rest.py
