[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gerrit-workflow-tools"
version = "0.1.0"
description = "Local git helpers for Gerrit stacked workflows"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.8",
    "pre-commit>=3.0",
    "pylint>=4.0.5",
    "pytest>=7.0",
    "ruff>=0.9",
]

[tool.uv]
default-groups = ["dev"]

[project.scripts]
ger = "gerrit_workflow_tools.cli_ger:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gerrit_workflow_tools"]
force-include = { "contrib/completion/ger.bash" = "gerrit_workflow_tools/completion/ger.bash" }

[tool.hatch.build.targets.sdist]
include = ["src/gerrit_workflow_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
mypy_path = "src"
packages = ["gerrit_workflow_tools"]

[tool.pylint."MAIN"]
ignore-paths = [
    "^tests/.*$",
]
source-roots = ["src"]
py-version = "3.10"

[tool.pylint."FORMAT"]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = [
]

[tool.ruff.lint]
# Ruff defaults are only a subset of pycodestyle (E4, E7, E9) plus Pyflakes (F).
# These families add import order, bug-prone patterns, modern syntax, and cleanup.
extend-select = [
    "E501", # line-length
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",   # isort
    "PIE", # flake8-pie
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
